添加用户钱包绑定功能，更新相关国际化文本，优化合约交互逻辑

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -5,3 +5,16 @@ Link2User = "[{{.User}}](tg://user?id={{.ID}})"
 OnUserJoined = "Welcome {{.User}} to 48Club big family"
 NotBindWallet = "{{.User}}, please bind your wallet address first"
 NotEnoughPoint = "{{.User}}, sorry, you don't have enough points to speak"
+BindWallet = "Click to bind wallet"
+
+[Chat]
+Start = "Hello, I'm 48Club bot, you can use me to bind your wallet address"
+Error = "Error: {{.Error}}"
+HasBindWallet = "You have binded wallet address: {{.Wallet}}"
+Click2UnBindWallet = "Click to unbind wallet"
+BindWallet = "Please select your binding method"
+BindWalletTypeA = "One-click binding"
+BindWalletTypeB = "Manual binding"
+BindWalletTypeBGuide="Please use the `Sign Message` function at https://bscscan\\.com/verifiedSignatures to sign the following content, and then reply the signed `Signature Hash` content to me\n\n`{{.Sign}}`"
+BindWalletSuccess = "Binding successful, your wallet address is: {{.Wallet}}"
+UnBindWalletSuccess = "Unbind successful"
