--- a/i18n/zh-Hans.toml
+++ b/i18n/zh-Hans.toml
@@ -5,3 +5,16 @@ Link2User = "[{{.User}}](tg://user?id={{.ID}})"
 OnUserJoined = "欢迎 {{.Users}} 加入 48Club 大家庭"
 NotBindWallet = "{{.User}}, 请先绑定钱包地址"
 NotEnoughPoint = "{{.User}}, 抱歉，您的积分不足, 无法发言"
+BindWallet = "点击绑定钱包"
+
+[Chat]
+Start = "你好, 我是 48Club 机器人, 你可以使用我来绑定你的钱包地址"
+Error = "发生错误: {{.Error}}"
+HasBindWallet = "已绑定钱包地址: {{.Wallet}}"
+Click2UnBindWallet = "点击解绑钱包"
+BindWallet = "请选择你的绑定方式"
+BindWalletTypeA = "一键绑定"
+BindWalletTypeB = "手动绑定"
+BindWalletTypeBGuide="请在 https://bscscan\\.com/verifiedSignatures 使用 `Sign Message` 功能将以下内容签名, 然后将签名后的 `Signature Hash` 内容回复给我\n\n`{{.Sign}}`"
+BindWalletSuccess = "绑定成功, 你的钱包地址是: {{.Wallet}}"
+UnBindWalletSuccess = "解绑成功"
